# aether-agent

./: .gitignore  LICENSE  MANIFESTO.md  NOTICE  README.md  ROADMAP.md  ROADMAP_TEST2.md  auth_test.json  docker-compose.yml  response.json  response2.json  setup.bat  setup.sh  start_desktop.bat
backend/: .env.example  Dockerfile  agent.py  config.py  database.py  debug_ai.py  ingest.py  local_db.py  main.py  mcp_server.py  memory.py  pyproject.toml  schema.sql  schema.txt  search_kb.py  sleep_cycle.py  sleep_debug.txt  telegram_bridge.py  test_agent.py  test_config.py  test_memory.py  test_sleep.py  world_model.py
backend/knowledge_source/: manifesto.md  test.md
backend/tests/: conftest.py  test_agent.py  test_api.py  test_ingest.py  test_qdrant.py  test_sqlite.py
example/backend/: .env.example  Dockerfile  README.md  check_models.py  cleanup_db.py  debug_card.py  debug_db.py  main.py  models_list.txt  pyproject.toml  requirements.txt  run_debate_from_reports.py  supabase_schema.sql  supabase_security.sql  test_result.txt  test_vector.py  verify_fix.py  worker.py
example/backend/app/: supabase_client.py  system_settings.json
example/backend/app/agents/: __init__.py  analyst.py  auditor.py  base.py  bureaucrat.py  citizen.py  ecologist.py  historian.py  legalist.py  modernist.py  orchestrator.py  scout.py  shrink.py
example/backend/app/api/: api.py  deps.py
example/backend/app/core/: limiter.py
example/backend/app/models/: debate.py
example/backend/app/services/: orchestrator_service.py  scout_service.py  (+3 more)
example/backend/migrations/: 001_vector_store.sql
(+66 files in other folders)
