[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "chromadb>=1.5.0",
    "fastapi>=0.129.0",
    "google-genai>=1.63.0",
    "httpx>=0.28.1",
    "pydantic-ai>=1.58.0",
    "python-dotenv>=1.2.1",
    "supabase>=2.28.0",
    "tavily-python>=0.7.21",
    "uvicorn>=0.40.0",
]
