[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "fastapi>=0.129.0",
    "google-genai>=1.63.0",
    "httpx>=0.28.1",
    "pydantic-ai>=1.58.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "python-telegram-bot>=22.6",
    "qdrant-client>=1.16.2",
    "supabase>=2.28.0",
    "tavily-python>=0.7.21",
    "uvicorn>=0.40.0",
]
